[package]
name = "kvs-bgp"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"

[dependencies]
bincode = "1.2"
bgpd = { git = "https://github.com/thepacketgeek/bgpd-rs" }
bgp-rs = { git = "https://github.com/thepacketgeek/bgp-rs" }
bytes = "0.5"
log = "*"
futures = "0.3"
env_logger = "*"
itertools = "0.9"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.14"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"